--- a/package.json
+++ b/package.json
@@ -54,11 +54,18 @@
     "primeng": "^7.1.3",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.8.29" ,
+    "karma": "^4.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha": "^1.3.0",
     "protractor": "^5.4.2",
     "puppeteer": "^1.20.0",
     "ts-node": "^5.0.1",
-    "tslint": "^5.9.1"
+    "tslint": "^5.9.1",
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
@@ -68,7 +75,9 @@
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",   
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
     "typescript": "~3.1.1"
   }
 }
