--- a/package.json
+++ b/package.json
@@ -52,10 +52,7 @@
     "primeng": "^8.0.3",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
-    "zone.js": "^0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.7",
+    "zone.js": "^0.10.2" , 
     "@angular/cli": "^8.3.7",
     "@angular/compiler-cli": "^8.2.9",
     "@angular/language-service": "^8.2.9",
@@ -70,7 +67,10 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^6.0.0",
+    "protractor": "^6.0.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.7",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
     "typescript": "~3.5.3"
