--- a/package.json
+++ b/package.json
@@ -15,59 +15,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.9",
-    "@angular/common": "^8.2.9",
-    "@angular/compiler": "^8.2.9",
-    "@angular/core": "^8.2.9",
-    "@angular/forms": "^8.2.9",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^8.2.9",
-    "@angular/platform-browser-dynamic": "^8.2.9",
-    "@angular/router": "^8.2.9",
-    "@aws-amplify/ui": "1.0.25",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "@ng-idle/core": "^7.0.0-beta.1",
-    "@ng-idle/keepalive": "^7.0.0-beta.1",
-    "@ng-select/ng-select": "^3.0.7",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "ag-grid-angular": "^21.2.2",
-    "ag-grid-community": "^21.2.2",
-    "ag-grid-enterprise": "^21.2.2",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.1.3",
+    "@angular/elements": "^8.2.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@ng-select/ng-select": "^2.20.5",
     "ajv": "^6.10.2",
-    "aws-amplify": "^1.1.40",
-    "aws-amplify-angular": "^3.0.15",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.2.1",
-    "graphql": "^14.5.8",
-    "jquery": "^3.4.1",
-    "less": "^3.10.3",
+    "chart.js": "^2.8.0",
+    "concat": "^1.0.3",
+    "core-js": "^2.5.4",
+    "document-register-element": "^1.14.1",
+    "elements-zone-strategy": "^8.0.0",
+    "events": "^3.0.0",
+    "fs-extra": "^8.1.0",
+    "jquery": "^3.4.0",
+    "less": "^3.8.1",
     "ng-treetable": "^1.3.3",
-    "ng2-bs3-modal": "^0.15.0",
     "ng2-datepicker": "^3.1.1",
-    "ngx-cookie-service": "^2.2.0",
-    "ngx-smart-modal": "^7.2.1",
+    "ngx-cookie-service": "^2.1.0",
     "popper.js": "^1.15.0",
-    "primeicons": "^2.0.0",
-    "primeng": "^8.0.3",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "zone.js": "^0.10.2" , 
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.0",
+    "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.4.0",
+    "zone.js": "^0.8.26" ,
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^8.3.7",
     "@angular/compiler-cli": "^8.2.9",
     "@angular/language-service": "^8.2.9",
-    "@types/jasmine": "^3.4.2",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~12.7.9",
-    "codelyzer": "~5.1.2",
-    "jasmine-core": "~3.5.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^6.0.0"
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "^5.4.2",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.7",
