--- a/package.json
+++ b/package.json
@@ -15,56 +15,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.1.3",
-    "@angular/elements": "^8.2.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@ng-select/ng-select": "^2.20.5",
+    "@angular/animations": "^8.2.11",
+    "@angular/common": "^8.2.11",
+    "@angular/compiler": "^8.2.11",
+    "@angular/core": "^8.2.11",
+    "@angular/forms": "^8.2.11",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.2.11",
+    "@angular/platform-browser-dynamic": "^8.2.11",
+    "@angular/router": "^8.2.11",
+    "@ng-select/ng-select": "^3.3.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+	  "@angular/elements": "^8.2.11",
     "ajv": "^6.10.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
-    "concat": "^1.0.3",
-    "core-js": "^2.5.4",
-    "document-register-element": "^1.14.1",
+	  "concat": "^1.0.3",
+    "core-js": "^3.3.3",
+	  "document-register-element": "^1.14.3",
     "elements-zone-strategy": "^8.0.0",
     "events": "^3.0.0",
     "fs-extra": "^8.1.0",
-    "jquery": "^3.4.0",
-    "less": "^3.8.1",
+    "jquery": "^3.4.1",
+    "less": "^3.10.3",
     "ng-treetable": "^1.3.3",
     "ng2-datepicker": "^3.1.1",
-    "ngx-cookie-service": "^2.1.0",
-    "popper.js": "^1.15.0",
-    "primeicons": "^1.0.0",
-    "primeng": "^7.1.0",
-    "rxjs": "^6.5.1",
-    "rxjs-compat": "^6.4.0",
-    "zone.js": "^0.8.26" ,
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^8.3.7",
-    "@angular/compiler-cli": "^8.2.9",
-    "@angular/language-service": "^8.2.9",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "ngx-cookie-service": "^2.2.0",
+    "ngx-xml2json": "^1.0.2",
+    "popper.js": "^1.16.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.4",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "zone.js": "^0.10.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "@angular-devkit/build-angular": "^0.803.12",
+    "@angular/cli": "^8.3.12",
+    "@angular/compiler-cli": "^8.2.11",
+    "@angular/language-service": "^8.2.11",
+    "@types/jasmine": "~3.4.4",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.11.2",
+    "codelyzer": "~5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~3.1.1"
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "~3.5.3",
+	  "puppeteer": "^1.20.0",
+    "sonar-scanner": "^3.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.7",
