--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@angular/elements": "^8.2.11",
+    "@angular-builders/custom-webpack": "^8.2.0" ,
     "ajv": "^6.10.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
