--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.2",
+    "@angular-builders/custom-webpack": "^8.2.0",
+    "ng-mocks": "^8.1.0",
     "codelyzer": "~5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
